# vitalsim

./: .gitignore  LICENSE  README.md  UUIDS.md  ble_simulator.py  pyproject.toml
src/vitalsim/: __init__.py  __main__.py  banner.py  bless_compat.py  cli.py  constants.py  platform_notes.py  simulator.py  state.py
tests/: test_simulator.py  test_state.py
